# video-streaming-local

./: .gitignore  Readme.md  readme.md
docker/: docker-compose.auth.yml  docker-compose.gateway.yml  docker-compose.ingest-cli.yml  docker-compose.kafka.yml  docker-compose.minio.yml  docker-compose.video-processing.yml  docker-compose.videos.yml  docker-compose.web.yml  docker-compose.websocket.yml  docker-compose.yml
docker/kong/: kong.yml  start.sh
docs/: api.puml  architecture.puml  arhitecture-description.md  video-streamiing-local.drawio  video-streaming-local-sequence-diagram.txt
services/ingest-cli/: Dockerfile  pyproject.toml
services/ingest-cli/src/: main.py
services/video-processing/: readme.md
services/video-processing/chunker/: Dockerfile  pyproject.toml
services/video-processing/chunker/docs/: video-pipeline.03-chunking.json  video-pipeline.04-finalizing.json
services/video-processing/chunker/src/: main.py
services/video-processing/encoder/: Dockerfile  pyproject.toml
services/video-processing/encoder/docs/: video-pipeline.02-transcode.json  video-pipeline.03-chunking.json
services/video-processing/encoder/src/: main.py
services/video-processing/lifecycle-manager/: Dockerfile  pyproject.toml
services/video-processing/lifecycle-manager/docs/: video-pipeline.01-ingest.json  video-pipeline.02-transcode.json  video-pipeline.04-finalizing.json
services/video-processing/lifecycle-manager/src/: main.py
services/video-processing/renamer/: Dockerfile  pyproject.toml  readme.md
services/video-processing/renamer/src/: main.py
services/videos/: Dockerfile  pyproject.toml
services/videos/docs/: readme.md
services/videos/src/: broker.py  config.py  db.py  main.py
services/web/: .gitignore  Dockerfile  index.html  package.json  vite.config.js
services/web/src/: App.jsx  api.js  index.css
services/web/src/pages/: Home.jsx  Login.jsx  Register.jsx  Video.jsx  WebSocketTest.jsx
services/websocket/: Dockerfile  package.json
services/websocket-manager/: .gitignore  Dockerfile  package.json
services/websocket-manager/src/: index.js
services/websocket/src/: index.js
services/websocket/src/handlers/: index.js
services/websocket/src/middleware/: auth.js
