[tool.poetry]
name = "ingest-cli"
version = "0.1.0"
description = "CLI tool to ingest a video into the platform"
authors = []


[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.0"
minio = "^7.2.0"


[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"
