[tool.poetry]
name = "encoder"
version = "0.1.0"
description = "Encodes videos into multiple resolutions and uploads to object storage"
authors = []


[tool.poetry.dependencies]
python = "^3.13"
confluent-kafka = "^2.8.0"
minio = "^7.2.15"


[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"
